- Current location now shows a marker when location has changed, and the old marker is removed - Changed display styling of Longitudes and Latitudes as well as the distance in meters if no location has been set - Set app to always be in portrait mode for better funcionality
TODO next:
- Create Custom Marker for current location (or set to blue dot instead of blue marker)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <resources>
-    <string name="app_name">DudeWheresMyCar</string>
-    <string name="set_latitude">Set Longitude:</string>
-    <string name="set_longitude">Set Latitude:</string>
-    <string name="current_latitude">Current Latitude:</string>
-    <string name="current_longitude">Current Longitude:</string>
+    <string name="app_name">Dude Where\'s My Car?</string>
+    <string name="latitude_longitude">Latitudes &amp; Longitudes</string>
+    <string name="set_lat_long">Set location:</string>
+    <string name="current_lat_long">Current:</string>
     <string name="distance_from_location">Distance from location (in meters):</string>
     <string name="no_3d_fix">No 3D Fix</string>
     <string name="set_location">Set Location</string>
