- Created Custom Marker icons for current location (green transparent marker icon) and for set location (car icon) - Added custom gradient, border, backgrounds to the drawable folder and made styling edits to activity_main.xml - Removed compile 'com.google.android.gms:play-services-plus:9.8.0' as it was not needed for the app
TODO next:
- Add a menu with an "About page"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="latitude_longitude">Latitudes &amp; Longitudes</string>
     <string name="set_lat_long">Set location:</string>
     <string name="current_lat_long">Current:</string>
-    <string name="distance_from_location">Distance from location (in meters):</string>
+    <string name="distance_from_location">Distance to location:</string>
     <string name="no_3d_fix">No 3D Fix</string>
     <string name="set_location">Set Location</string>
     <string name="google_maps_API_key">AIzaSyCpSu-WdBUXR8iI4wbdJeAkadNi-NHw6gE</string>
